--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
 	"private": true,
 	"dependencies": {
 		"express" : "3.4.1",
-		"natural" : "0.1.23"
+		"natural" : "0.1.23",
+		"js2xmlparser" : "0.1.2",
+		"tmp" : "0.0.21"
 	}
 }
