Added two new preprocessors, to use in method 2, made changes to allow for multiple preprocessors

--- a/server/config-example.json
+++ b/server/config-example.json
@@ -1,7 +1,7 @@
 {
 	"processingsequence":{
 		"parser" : "simpleparser",
-		"preprocessor": "cleantextpreprocessor",
+		"preprocessor": ["cleantextpreprocessor"],
 		"matcher" : "defaultmatcher",
 		"postprocessor" : "wordsentencepostprocessor",
 		"formatter" : "xmlformatter"
