--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,6 @@ server/download/*
 files/*
 !files/*.xml
 server/config.json
-server/synchronisaion/srl/*
+server/synchronisation/srl/*
 !server/synchronisation/srl/*.jar
-!server/synchronisation/srl/lib/*
+!server/synchronisation/srl/lib/
