New version of SemanticRoleLabeler java, new version of NLP module, added srl component in config file, added wordnet functionality, added sentence similarity

--- a/server/config-example.json
+++ b/server/config-example.json
@@ -7,7 +7,9 @@
 		"formatter" : "xmlformatter"
 	},
 	"alchemyapi":{
-		"APIkey" : "12345"
+		"APIkey" : "example_must_be_replaced_with_real_key"
+	},
+	"srl":{
+		"usecachedversion" : false
 	}
-
 }
