--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
 	"private": true,
 	"dependencies": {
 		"express" : "4.0.0",
+		"busboy" : "0.2.3",
+		"morgan" : "1.0.0",
 		"natural" : "0.1.27",
 		"js2xmlparser" : "0.1.3",
 		"tmp" : "0.0.23",
