--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
 		"js2xmlparser" : "0.1.3",
 		"tmp" : "0.0.23",
 		"pos" : "0.1.5",
-    "libxmljs" : "0.8.1",
-    "async" : "0.7.0"
+    	"libxmljs" : "0.8.1"
 	}
 }
