Update README, small cleanup in subtitles file of GOT, update configuration example to new format, print a little less in the evaluation and show only 3 decimals on the webpage, move the responsability of sending the path from formatter to loader, add parameter for choosing your own fileprefix, small improvements to the laoder, fix the inputprinter, remove the jaromatcher because it had become obsolete, change the names of the matchers, small improvements to the scene parser, fix the simple parser, remove some commented sections, rename the defaultpostprocessor, change the way dashes are removed in the clean text preprocesor, remove contraction replacement because it had no use, do not remove apostrophes when doing punctuation removal, small updates and fixes for the Java modules

--- a/server/config-example.json
+++ b/server/config-example.json
@@ -1,15 +1,10 @@
 {
 	"processingsequence":{
-		"parser" : "simpleparser",
-		"preprocessor": ["cleantextpreprocessor"],
-		"matcher" : "defaultmatcher",
-		"postprocessor" : "wordsentencepostprocessor",
+		"parser" : "sceneparser",
+		"preprocessor": ["cleantextpreprocessor","punctuationremoval"],
+		"matcherparameters" : [0.69,4,0.01,0.71],
+		"matcher" : "proposedmatcher",
+		"postprocessor" : ["scenepostprocessor"],
 		"formatter" : "xmlformatter"
-	},
-	"alchemyapi":{
-		"APIkey" : "example_must_be_replaced_with_real_key"
-	},
-	"srl":{
-		"usecachedversion" : false
 	}
 }
